--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "next": "14.0.1",
+    "next-nprogress-bar": "^2.1.2",
+    "nextjs-progressbar": "^0.0.16",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.0.1"
+    "react-dom": "^18"
   }
 }
